Refactor getting mark book for teacher and form teacher